<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_score_activity"
    tools:context=".view.ScoreActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_75sdp"
        android:background="@drawable/background_round_title"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="@dimen/_6sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/string_score_activity_title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:elevation="@dimen/_4sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/string_score_activity_tv_score"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_28ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_highest_score"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:elevation="@dimen/_4sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/string_score_activity_tv_highest_score"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button_playAgain"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_corner"
        android:backgroundTint="@color/colorAccent"
        android:elevation="@dimen/_12sdp"
        android:text="@string/string_score_activity_btn_play_again"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>